# fit5222-a1-template

./: .gitignore  GETTING_STARTED.md  README.md  piglet.py  pyproject.toml  question1.py  question2.py  question3.py
example/: 8_n_puzzle.scen  arena2.min.scen  graph_test.py  n_puzzle_test.py
lib_piglet/cli/: run_tool.py
lib_piglet/domains/: gridmap.py
lib_piglet/expanders/: grid_expander.py
lib_piglet/heuristics/: graph_h.py  gridmap_h.py  n_puzzle_h.py
lib_piglet/logging/: serialisers.py
lib_piglet/search/: graph_search.py  iterative_deepening.py
lib_piglet/utils/: focal_priority_queue.py
