[project]
name = "piglet"
version = "0.1.0"
description = "A variety of flexible search algorithm implementations, plus the FIT5222 assignment 1 scaffold."
readme = "README.md"
requires-python = ">=3.14"
authors = [
    { name = "Daniel Harabor", email = "dharabo@gmail.com" },
    { name = "Zhe Chen", email = "zhe.chen@monash.edu" },
    { name = "Kevin Zheng", email = "kevin.zheng@monash.edu" },
]
dependencies = [
    "pyyaml>=6.0.2",
    "flatland-spl[native]",
]

[project.scripts]
piglet = "piglet:main"

[tool.uv.sources]
flatland-spl = { git = "https://github.com/ShortestPathLab/flatland" }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["lib_piglet", "piglet.py"]
